--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,15 @@
          version="2.5">
 
     <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
+        <welcome-file>testgwtp.html</welcome-file>
     </welcome-file-list>
+
+    <servlet>
+        <servlet-name>homeServiceImpl</servlet-name>
+        <servlet-class>com.ivan.server.HomeServiceImpl</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>homeServiceImpl</servlet-name>
+        <url-pattern>/TestGwtp/home</url-pattern>
+    </servlet-mapping>
 </web-app>
